# fribidi

./: CMakeLists.txt  config.h.in
gen.tab/: CMakeLists.txt
lib/: CMakeLists.txt
